lasagna link added to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
+        
+        <h2>Recipes:</h2>
+        <ol>
+            <li><a href="./lasagna.html</li>
+        </ol>
     </body>
 </html>
