--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -1,4 +1,37 @@
+<main>
+    
 <h1>Lasagna Recipe</h1>
 
 <img src="lasagna photo.jpeg"/>
 
+<h2>Description</h2>
+    <p>Growing up with a close-knit Itallian family, nothing brings back memories than the scent of lasagna in the oven. That nostalgic tast with fresh ingredients can't be beat, and now, there is a perfect recipe to pay homage to Nana's lasagna.</p>
+
+<h3>Ingredients:</h3>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>1 pound lean ground beef</li>
+        <li>1 large white onion diced</li>
+        <li>5 cloves garlic minced</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>1 (15 ounce) can tomato sauce</li>
+        <li>1/2 cup white wine</li>
+        <li>2 tablespoons white sugar</li>
+        <li>1/2 cup chopped fresh basil</li>
+        <li>1 teaspoon fennel seeds</li>
+        <li>1 teaspoon ground oregano</li>
+        <li>1/2 teaspoon salt</li>
+    </ul>
+
+<h4>Steps:</h4>
+    <ol>
+        <li>In a large pot over medium heat, add in ground sausage and ground beef. Use a spoon to break up the meat into small pieces. Add in onion and garlic and cook until meat is well browned, stirring constantly. Stir in sugar, fresh basil, fennel, oregano, 1/2 teaspoon salt, pepper, and 1/4 cup chopped parsley. Pour in crushed tomatoes, tomato paste, tomato sauce, and wine*. Stir well and bring to a simmer. Reduce heat to low and simmer 1-4 hours, stirring occasionally.</li>
+        <li>Meanwhile, place lasagna noodles into the bottom of a pan. Pour hot tap water directly over the noodles, making sure the pasta is completely immersed in the water. Let them soak for 30 minutes, then drain and discard water.</li>
+        <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, 1/2 teaspoon salt, and nutmeg. Refrigerate until ready to assemble lasagna.</li>
+        <li>Preheat oven to 375 degrees. Lightly grease a deep 9x13 pan.</li>
+        <li>To assemble, spread about 1 cup of meat sauce in the bottom of the prepared pan. Place 4 noodles on top. Spread with 1/3 of the ricotta cheese mixture. Top with 1/4 of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, then sprinkle with 1/4 cup parmesan cheese. Repeat layering two more times to create three complete layers. To finish, place a final layer of pasta, topped with another 1 cup of meat sauce to cover the pasta. Top with remaining mozzarella and Parmesan cheese. Cover loosely with aluminum foil.</li>
+        <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes to allow cheese to brown. Serve hot.</li>
+    </ol>
+
+    </main>
