--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <h1>Odin Recipes</h1>
         
         <h2>Recipes:</h2>
-        <ol>
-            <li><a href="./lasagna.html</li>
-        </ol>
+        <ul>
+            <li><a href="./lasagna.html"></a></li>
+            <li><a href="./risotto.html"></a></li>
+            <li><a href="./bread_pudding.html"></a></li>
+        </ul>
     </body>
 </html>
