--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         
         <h2>Recipes:</h2>
         <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/risotto.html">Wild Mushroom Risotto</a></li>
-            <li><a href="recipes/bread_pudding.html">Bread Pudding</a></li>
+            <li><a href="/recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="/recipes/risotto.html">Wild Mushroom Risotto</a></li>
+            <li><a href="/recipes/bread_pudding.html">Bread Pudding</a></li>
         </ul>
     </body>
 </html>
