updating image links

--- a/Recipes/bread_pudding.html
+++ b/Recipes/bread_pudding.html
@@ -2,7 +2,7 @@
 
 <h1>Bread Pudding Recipe</h1>
 
-<img src="bread_pudding_photo.jpeg"/>
+<img src="../images/bread_pudding_photo.jpeg" />
 
 <h2>Description</h2>
     <p>In my opinion, there is nothing like a fresh, warm bread pudding to finish off a meal. With simple prep, and not many ingredients, it is a stellar option to cap off a meal.</p>
