--- a/Recipes/risotto.html
+++ b/Recipes/risotto.html
@@ -2,7 +2,7 @@
 
 <h1>Wild Mushroom Risotto Recipe</h1>
 
-<img src="risotto_photo.jpeg"/>
+<img src="../images/risotto_photo.jpeg" />
 
 <h2>Description</h2>
     <p>It's autumn in the PNW, and beautiful golden chantrelle mushrooms have been foreged along the Oregon coast. While the weather gets cooler, there is nothing like a warm risotto with some beautiful mushrooms unique to this region</p>
